small spacing fix

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -216,7 +216,6 @@ span.yellow-u,
 span.red-u {
   padding-bottom: 0.3em;
   background: var(--line-yellow) bottom left / 100% 0.3em no-repeat;
-  font-weight: bold;
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
 }
